# cloud-secret-exposure-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: render_architecture.py
examples/: config-bundle.json
n8n/: secret-review-workflow.json
social/: email-summary.md  linkedin-post.md  medium-ready.md
src/cloud_secret_exposure_guard/: __init__.py  __main__.py  engine.py
tests/: test_engine.py
