[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-secret-exposure-guard"
version = "0.1.0"
description = "Deterministic, redaction-first secret exposure checks for cloud configuration bundles"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jeffrey Ikuoyemwen"}]

[tool.setuptools.packages.find]
where = ["src"]

